# Devlog

./: .gitignore  README.md  pyproject.toml
devlog/: __init__.py  ai.py  cli.py  collector.py  config.py  prompt.py  writer.py
docs/devlogs/: 001-total-code.md  002-installation-change.md  003-added-compoatibility-for-groq.md
tests/: test_ai.py  test_cli.py  test_config.py
