[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "devlog-cli"
version = "0.1.0"
description = "A git-powered development journal"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "typer>=0.16.0",
    "requests>=2.32.0",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
]

[project.scripts]
devlog = "devlog.cli:app"

[tool.setuptools]
packages = ["devlog"]